--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <a href="./table.html">Table</a>
+    <a href="./main.html">Go back</a>
     <form action="submit" class="js-form car-search">
       <div class="car-group">
         <input type="text" name="query" class="car-input" placeholder="Пошук" />
