--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <p><a href="./index.html">Car's cards</a></p>
+    <p><a href="./main.html">Go back</a></p>
     <table class="transaction-table js-transaction-table">
       <thead>
         <tr>
