--- a/main.html
+++ b/main.html
@@ -9,5 +9,6 @@
     <p><a href="./index.html">Car's cards</a></p>
     <p><a href="./table.html">Table</a></p>
     <p><a href="./box.html">Box</a></p>
+    <p><a href="./form.html">Form submit</a></p>
   </body>
 </html>
